# search-engine

./: .gitignore  Cargo.toml  README.md  build.rs  conanfile.py  conanfile.txt
src/common/: Cargo.toml
src/common/src/: error.rs  lib.rs  random.rs  result.rs  thread_pools.rs
src/database/: Cargo.toml
src/database/migrations/: core-00001-init.sql  core-00002-developer-sources.sql  core-00003-search-categories.sql  core-00004-search-folders.sql  core-00005-indexer-pause-settings.sql  core-00005-settings-general.sql  core-00006-settings-indexer-pause.sql  files-00001-init.sql
src/database/src/: adjusted_terms_add.rs  adjusted_terms_delete_all.rs  adjusted_terms_delete_user.rs  adjusted_terms_list.rs  ai_models_add.rs  ai_models_delete.rs  ai_models_list.rs  ai_models_update.rs  authentication_http_basic_delete.rs  authentication_http_basic_upsert.rs  authentication_oauth_delete.rs  authentication_oauth_upsert.rs  authentication_token_delete.rs  authentication_token_upsert.rs  connection_parameter_update.rs  connection_parameters_delete_all.rs  connection_parameters_list.rs  connection_parameters_upsert.rs  connections_add.rs  connections_delete.rs  connections_delete_plugin.rs  connections_list.rs  connections_update.rs  developer_sources_add.rs  developer_sources_list.rs  developer_sources_update.rs  files_add.rs  files_bulk_add.rs  files_bulk_update_index.rs  files_clear.rs  files_count_all.rs  files_count_index.rs  files_count_thumbnail.rs  files_delete.rs  files_delete_all.rs  files_delete_prefix.rs  files_get_document_id.rs  files_get_path.rs  files_list.rs  files_list_index.rs  (+53 more)
src/file_crawler/: Cargo.toml
src/file_crawler/src/: builder.rs  file_crawler.rs  filter.rs  lib.rs  utils.rs
src/file_opener/: Cargo.toml
src/file_opener/common/: Cargo.toml
src/file_opener/common/src/: file_opener.rs  lib.rs
src/file_opener/linux/: Cargo.toml
src/file_opener/linux/src/: app_info.rs  env.rs  file_opener_linux.rs  lib.rs
src/file_opener/mac/: Cargo.toml
src/file_opener/mac/src/: app_info.rs  file_opener_mac.rs  lib.rs
src/file_opener/windows/: Cargo.toml
src/file_opener/windows/src/: file_opener_windows.rs  lib.rs
src/file_watcher/: Cargo.toml
src/file_watcher/src/: lib.rs
src/indexer/: Cargo.toml
src/indexer/airbyte/: Cargo.toml
src/indexer/airbyte/benches/: benchmark_airbyte.rs
src/indexer/airbyte/src/: indexer_airbyte.rs  lib.rs
src/indexer/application/: Cargo.toml
src/indexer/application/benches/: benchmark_application.rs
src/indexer/application/src/: indexer_application.rs  lib.rs
src/indexer/archive/: Cargo.toml
src/indexer/archive/benches/: benchmark_archive.rs
src/indexer/archive/src/: indexer_archive.rs  lib.rs
src/indexer/audio/: Cargo.toml
src/indexer/audio/benches/: benchmark_audio.rs
src/indexer/audio/src/: indexer_midi.rs  lib.rs
src/indexer/book/: Cargo.toml
src/indexer/book/benches/: benchmark_book.rs
src/indexer/book/src/: indexer_epub.rs  indexer_fb2.rs  indexer_mobi.rs  indexer_rm.rs  indexer_twee.rs  lib.rs
src/indexer/calendar/: Cargo.toml
src/indexer/calendar/benches/: benchmark_calendar.rs
src/indexer/certificate/: Cargo.toml
src/indexer/code/: Cargo.toml
src/indexer/code/src/: lib.rs  (+2 more)
src/indexer/codeartifact/: Cargo.toml
src/indexer/contact/: Cargo.toml
src/indexer/core/: Cargo.toml
src/indexer/data/: Cargo.toml
src/indexer/deno/: Cargo.toml
src/indexer/diskimage/: Cargo.toml
src/indexer/document/: Cargo.toml
src/indexer/email/: Cargo.toml
src/indexer/font/: Cargo.toml
src/indexer/game/: Cargo.toml
src/indexer/graphics/: Cargo.toml
src/indexer/hardware/: Cargo.toml
src/indexer/image/: Cargo.toml
src/indexer/map/: Cargo.toml
src/indexer/noop/: Cargo.toml
src/indexer/science/: Cargo.toml
src/indexer/src/: lib.rs
src/indexer/video/: Cargo.toml
src/rpc/: Cargo.toml
src/rpc/core/: Cargo.toml
src/rpc/pubsub/: Cargo.toml
src/rpc/tauri/: Cargo.toml
src/rpc/utils/: Cargo.toml
src/rpc/ws/: Cargo.toml
src/s3/: Cargo.toml
src/s3/src/: lib.rs
src/search/: Cargo.toml  package-lock.json
src/search/core/: Cargo.toml
src/search/extensions/: Cargo.toml  temp
src/search/file/: Cargo.toml
src/search/index/: Cargo.toml
src/search/jobs/: Cargo.toml
src/search/tantivy/: Cargo.toml
src/search/transfer/: Cargo.toml
src/search_jni/: Cargo.toml
src/search_jni/src/: document.rs  lib.rs
src/tantivy/: Cargo.toml
src/tantivy/src/: corrections.rs  encrypted_dir.rs  encrypted_stream.rs  helpers.rs  index.rs  index_manager.rs  lib.rs  path_facet_converter.rs  query.rs  reader.rs  schema.rs  snapshot.rs  stop_words.rs  storage.rs  structures.rs  synonyms.rs  tokenizer.rs  writer.rs
src/thumbnailer/: Cargo.toml
src/thumbnailer/aiff/: Cargo.toml
src/thumbnailer/avif/: Cargo.toml
src/thumbnailer/bmp/: Cargo.toml
src/thumbnailer/code/: Cargo.toml
src/thumbnailer/core/: Cargo.toml
src/thumbnailer/dds/: Cargo.toml
src/thumbnailer/epub/: Cargo.toml
src/thumbnailer/flac/: Cargo.toml
src/thumbnailer/gif/: Cargo.toml
src/thumbnailer/heif/: Cargo.toml
src/thumbnailer/ico/: Cargo.toml
src/thumbnailer/ipynb/: Cargo.toml
src/thumbnailer/jpeg/: Cargo.toml
src/thumbnailer/json/: Cargo.toml
src/thumbnailer/m4a/: Cargo.toml
src/thumbnailer/mac/: Cargo.toml  Package.resolved  Package.swift  build.rs
src/thumbnailer/md/: Cargo.toml
src/thumbnailer/mp3/: Cargo.toml
src/thumbnailer/noop/: Cargo.toml
src/thumbnailer/png/: Cargo.toml
src/thumbnailer/pnm/: Cargo.toml
src/thumbnailer/ppm/: Cargo.toml
src/thumbnailer/psd/: Cargo.toml
src/thumbnailer/qoi/: Cargo.toml
src/thumbnailer/raw/: Cargo.toml
src/thumbnailer/src/: lib.rs
src/thumbnailer/svg/: Cargo.toml
src/thumbnailer/tex/: Cargo.toml
src/thumbnailer/tga/: Cargo.toml
src/thumbnailer/three/: Cargo.toml
src/thumbnailer/tiff/: Cargo.toml
src/thumbnailer/txt/: Cargo.toml
src/thumbnailer/video/: Cargo.toml
src/thumbnailer/wav/: Cargo.toml
src/thumbnailer/webp/: Cargo.toml
src/utils/: Cargo.toml
src/utils/src/: clipboard.rs  fs.rs  lib.rs  throttle.rs
(+3919 files in other folders)
