[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
arc-swap = "1"
async-backtrace = "0.2"
async-trait = "0.1"
base64-simd = "0.8.0"
battery = "0.7"
chrono = "0.4"
criterion = "0.5"
crossbeam = "0.8"
crossbeam-skiplist = "0.1"
dashmap = { version = "5.5", features = ["serde"] }
directories = "5"
enum2str = "0.1"
file-format = { version = "0.23", features = ["reader"] }
flate2 = "1.0"
futures = "0.3"
hashbrown = { version = "0.14", features = ["serde"] }
itertools = "0.12"
lazy_static = "1"
log = "0.4"
num_cpus = "1.16"
num = "0.4.1"
once_cell = "1"
parking_lot = "0.12"
paste = "1.0"
rand = "0.8"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13"
smallvec = { version = "1.11.1", features = ["serde"] }
speedy = "0.8"
spin = "0.9.8"
strum = "0.26"
strum_macros = "0.26"
sysinfo = "0.30"
systemstat = "0.2"
tantivy = "0.21"
tantivy-vibrato = { git = "https://github.com/harana-oss/tantivy-vibrato.git" }
tauri = { version = "1", features = [ "devtools", "window-all", "dialog-all", "http-all", "fs-read-dir", "fs-read-file", "global-shortcut-all", "macos-private-api", "path-all", "protocol-all", "system-tray"] }
temp-dir = "0.1"
thiserror = "1"
time = { version = "0.3", features = ["std", "serde"] }
tinyrand = "0.5.0"
tokio = { version = "1", features = ["full"]  }
tokio-rayon = { git = "https://github.com/harana-oss/tokio-rayon.git" }
tracing = "0.1"
tracing-attributes = "0.1"
tracing-chrome = "0.7"
tracing-futures = "0.2"
tracing-flame = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = { version = "1", features = ["uuid"] }
uuid = { version = "1", features = ["fast-rng", "v7"] }
uuid-simd = "0.8.0"

[dev-dependencies]
color-eyre = "0.6"
once_cell = "1.19"
rand = "0.8"
temp-dir = "0.1"
tokio = { version = "1", features = ["rt", "macros", "time", "sync", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tracing-tree = "0.3"