[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
harana_common = { package = "common", path = "../common" }

deadpool-sqlite = "0.7.0"
#r2d2 = "0.8"
#r2d2_sqlite = "0.23"
rusqlite = { version = "0.30", features = ["functions", "time", "bundled", "blob", "array", "trace", "winsqlite3"] }
rusqlite_migration = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2"
tracing = "0.1.40"