[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
harana_common = { package = "common", path = "../common" }

deadpool-sqlite = "0.6.0"
#r2d2 = "0.8"
#r2d2_sqlite = "0.23"
rusqlite = { version = "=0.29.0", features = ["functions", "time", "bundled", "blob", "array", "trace"] }
rusqlite_migration = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2"
tracing = "0.1.40"