[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
harana_common = { package = "common", path = "../common" }

deadpool-sqlite = "0.8.1"
rusqlite = { version = "=0.31.0", features = ["functions", "time", "bundled", "blob", "array", "trace"] }
rusqlite_migration = "=1.2.0"
urlencoding = "2"