[package]
name = "file_watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
harana_common = { package = "common", path = "../common" }
harana_io = { package = "io", path = "../io" }

notify = "6.1.1"
notify-debouncer-full = "0.3.1"
nix = { version = "0.27.1", features = ["user"] }
walkdir = "2.4.0"