[package]
name = "s3"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.56.1"
aws-sdk-iam = "0.31.1"
aws-sdk-s3 = "0.31.2"
aws-smithy-http = "0.56.1"
futures = { version = "0.3", features = ["thread-pool"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", default-features = false, features = ["rt", "macros", "rt-multi-thread", "net", "io-util", "time"] }