[package]
name = "s3"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1"
aws-sdk-iam = "1"
aws-sdk-s3 = "1"
aws-smithy-http = "0.60.12"
futures = { version = "0.3", features = ["thread-pool"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", default-features = false, features = ["rt", "macros", "rt-multi-thread", "net", "io-util", "time"] }