[package]
name = "search"
version = "0.1.0"
edition = "2021"

[dependencies]
harana_database = { package = "database", path = "../database" }
harana_search_core = { package = "search_core", path = "core" }
harana_search_extensions = { package = "search_extensions", path = "extensions" }
harana_search_file = { package = "search_file", path = "file" }
harana_search_index = { package = "search_index", path = "index" }
harana_search_jobs = { package = "search_jobs", path = "jobs" }

[dev-dependencies]
pretty_env_logger = "0.5.0"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"