[package]
name = "search"
version = "0.1.0"
edition = "2021"

[dependencies]
harana_database = { package = "database", path = "../database" }
harana_search_core = { package = "search_core", path = "core" }
harana_search_extensions = { package = "search_extensions", path = "extensions" }
harana_search_file = { package = "search_file", path = "file" }
harana_search_index = { package = "search_index", path = "index" }
harana_search_jobs = { package = "search_jobs", path = "jobs" }
harana_search_tantivy = { package = "search_tantivy", path = "tantivy" }
harana_search_transfer = { package = "search_transfer", path = "transfer" }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"