[package]
name = "search_jni"
version = "0.1.0"
edition = "2021"

[dependencies]
harana_common = { package = "common", path = "../common" }
harana_search_index = { package = "search_index", path = "../search/index" }
harana_tantivy = { package = "tantivy", path = "../tantivy" }

jni = "0.21"

[lib]
crate_type = ["cdylib"]