[package]
name = "tantivy"
version = "0.1.0"
edition = "2021"

[dependencies]
harana_common = { package = "common", path = "../common" }
harana_io = { package = "io", path = "../io" }

aes = { version = "0.7.5", features = ["ctr"] }
async-channel = { version = "1", features = [] }
bincode = "1"
byteorder = "1.4.3"
cipher = "0.4.4"
compose = { git = "https://github.com/lnx-search/compose.git", tag = "0.1.0" }
crc32fast = "1.3.2"
crypto-mac = "0.11.1"
deunicode = "1.4.0"
directories = "5"
hkdf = "0.11.0"
hmac = "0.11.0"
pbkdf2 = "0.8.0"
rand = "0.8.5"
sha2 = "0.9.9"
sled = "0.34"
tempfile = "3.10.1"
walkdir = "2.4.0"
zeroize = "1.4.3"
zip = "0.6.6"