[package]
name = "tantivy"
version = "0.1.0"
edition = "2021"

[dependencies]
harana_common = { package = "common", path = "../common" }
harana_io = { package = "io", path = "../io" }

aes = { version = "0", features = ["ctr"] }
async-channel = { version = "2", features = [] }
bincode = "1"
byteorder = "1"
cipher = "0"
compose = { git = "https://github.com/lnx-search/compose.git", tag = "0.1.0" }
crc32fast = "1"
deunicode = "1"
directories = "5"
hkdf = "0.13.0-pre.4"
hmac = { version = "0.13.0-pre.4", features = ["reset"] }
pbkdf2 = "0.13.0-pre.1"
rand = "0.8.5"
sha2 = "0.11.0-pre.4"
sled = "0.34"
tempfile = "3.16.0"
walkdir = "2.5.0"
zeroize = "1.8.1"
zip = "0.6.6"
