[package]
name = "tantivy"
version = "0.1.0"
edition = "2021"

[dependencies]
harana_common = { package = "common", path = "../common" }
harana_io = { package = "io", path = "../io" }

aes = { version = "0", features = ["ctr"] }
async-channel = { version = "2", features = [] }
byteorder = "1"
cipher = "0"
compose = { git = "https://github.com/lnx-search/compose.git", tag = "0.1.0" }
crc32fast = "1"
deunicode = "1"
directories = "5"
hkdf = "0.12.4"
hmac = { version = "0.12.1", features = ["reset"] }
pbkdf2 = "0.12.2"
zeroize = "1"