[package]
name = "file_opener_mac"
version = "0.1.0"
edition = "2021"

[dependencies]
harana_common = { package = "common", path = "../../common" }
harana_file_opener_common = { package = "file_opener_common", path = "../common" }
serde = { version = "1.0" }

[target.'cfg(target_os = "macos")'.dependencies]
swift-rs = "1"

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { version = "1", features = ["build"] }