[package]
name = "indexer_airbyte"
version = "0.1.0"
edition = "2021"

[dependencies]
harana_common = { package = "common", path = "../../common" }
harana_document = { package = "document", path = "../../document" }
harana_indexer_core = { package = "indexer_core", path = "../core" }
harana_io = { package = "io", path = "../../io" }
csv = "1"

[[bench]]
name = "benchmark_airbyte"
harness = false