[package]
name = "indexer_audio"
version = "0.1.0"
edition = "2021"

[dependencies]
harana_common = { package = "common", path = "../../common" }
harana_document = { package = "document", path = "../../document" }
harana_indexer_core = { package = "indexer_core", path = "../core" }
harana_io = { package = "io", path = "../../io" }

midi-reader-writer = {version = "0.1.2", features = ["engine-midly-0-5"] }

[[bench]]
name = "benchmark_audio"
harness = false