[package]
name = "indexer_book"
version = "0.1.0"
edition = "2021"

[dependencies]
harana_common = { package = "common", path = "../../common" }
harana_document = { package = "document", path = "../../document" }
harana_indexer_core = { package = "indexer_core", path = "../core" }
harana_io = { package = "io", path = "../../io" }

epub = { git = "https://github.com/danigm/epub-rs" }
fb2 = { git = "https://github.com/harana-oss/fb2.git" }
mobi = "0.8.0"
quick-xml = "0.37"
remarkable_lines = { git = "https://github.com/harana-oss/remarkable-lines.git" }
twee-v3 = "0.2.1"

[[bench]]
name = "benchmark_book"
harness = false
