[package]
name = "indexer_calendar"
version = "0.1.0"
edition = "2021"

[dependencies]
harana_common = { package = "common", path = "../../common" }
harana_document = { package = "document", path = "../../document" }
harana_indexer_core = { package = "indexer_core", path = "../core" }
harana_io = { package = "io", path = "../../io" }

ical = { version = "0.11.0", features = ["serde-derive"] }

[[bench]]
name = "benchmark_calendar"
harness = false