[package]
name = "indexer_code"
version = "0.1.0"
edition = "2021"

[dependencies]
harana_common = { package = "common", path = "../../common" }
harana_document = { package = "document", path = "../../document" }
harana_indexer_core = { package = "indexer_core", path = "../core" }
harana_io = { package = "io", path = "../../io" }

comment-parser = "0.1.0"
dbml-rs = "0.1.0-beta.2"
xcodeproj = "0.3.0"

[[bench]]
name = "benchmark_code"
harness = false