[package]
name = "indexer_core"
version = "0.1.0"
edition = "2021"

[dependencies]
harana_common = { package = "common", path = "../../common" }
harana_document = { package = "document", path = "../../document" }
harana_io = { package = "io", path = "../../io" }

byteorder = "1.5.0"
candle-core = "0.8.2"
candle-examples = "0.8.1"
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
hf-hub = "0.3.2"
imageproc = "0.25"
itertools = "0.14.0"
jbig2dec = "0.3"
jpeg2k = { version = "0.9.1" }
kamadak-exif = "0.5"
libdeflater = "1.23.0"
#magick_rust = { version = "0.19.1", features = ["disable-hdri"] }
ndarray = "0.16"
okolors = "0.8.1"
palette = "0.7.6"
reverse_geocoder = "3"
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
rust_tokenizers = "8"
rusttype = "0.9.3"
rusty-tesseract = "1.1"
stop-words = "0.8"
tokenizers = "0.20.4"
wav = "1.0.1"
zune-inflate = "0.2.54"

[target.'cfg(target_os = "linux")'.dependencies]
candle-core = { version = "0.6.0", features = ["mkl"] }

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.6.0", features = ["accelerate"] }

[target.'cfg(target_os = "windows")'.dependencies]
candle-core = { version = "0.6.0" }

[dev-dependencies]
tokenizers = { version = ">=0.13.4", default-features = false, features = [ "onig" ] }
