[package]
name = "indexer_deno"
version = "0.1.0"
edition = "2021"

[dependencies]
harana_common = { package = "common", path = "../../common" }
harana_document = { package = "document", path = "../../document" }
harana_indexer_core = { package = "indexer_core", path = "../core" }
harana_io = { package = "io", path = "../../io" }

deno_core = "0.304.0"
deno_runtime = "0.173.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "benchmark_deno"
harness = false