[package]
name = "indexer_deno"
version = "0.1.0"
edition = "2021"

[dependencies]
harana_common = { package = "common", path = "../../common" }
harana_document = { package = "document", path = "../../document" }
harana_indexer_core = { package = "indexer_core", path = "../core" }
harana_io = { package = "io", path = "../../io" }
harana_plugin = { package = "plugin", path = "../../plugin" }

deno_core = "0.307.0"

[[bench]]
name = "benchmark_deno"
harness = false